# ReCoDE-Hamiltonian-Systems-Jax

./: .pre-commit-config.yaml  404.html  README.md  dev-requirements.txt  index.html  mkdocs.yml  pyproject.toml  requirements.txt
01-Introduction-to-Hamiltonian-Systems/: index.html
02-Installing-and-running-the-code/: index.html
03-Structure-of-the-code/: index.html
04-Simple_harmonic_oscillator_example/: index.html
05-N-body-example/: index.html
06-Defining-your-own-Hamiltonian-system/: index.html
07-Object-Oriented-design/: index.html
08-Using-JAX-to-solve-the-equations/: index.html
09-Using-matplotlib-to-produce-outputs/: index.html
docs/: 01-Introduction-to-Hamiltonian-Systems.md  01-Introduction-to-Hamiltonian-systems.ipynb  01introduction.md  02-Installing-and-running-the-code.ipynb  02Basics-of-Hamiltonian-systems.ipynb  03-Structure-of-the-code.md  03Example-simple-harmonic-oscillator.ipynb  03aInstalling-and-running-the-code.ipynb  03bStructure-of-the-code.md  03cDeep-dives-in-the-code.md  04-Simple_harmonic_oscillator_example.ipynb  04Simulating-and-visualising-trajectories.ipynb  04_Simple_harmonic_oscillator.ipynb  04aExample-simple-harmonic-oscillator.md  04bSimulating-and-visualising-trajectories.ipynb  05-N-body-example.ipynb  05Defining-your-own-Hamiltonian-system.ipynb  05Defining-your-own-Hamiltonian-system.md  06-Defining-your-own-Hamiltonian-system.md  06N-body-problem.ipynb  07-Object-Oriented-design.md  07Wrapping-things-up.ipynb  08-Using-JAX-to-solve-the-equations.md  09-Using-matplotlib-to-produce-outputs.md
hdynamics/: data.py  (+3 more)
(+10 files in other folders)
