[tool.setuptools.packages.find]
exclude = ["htmlcov"] # Exclude the coverage report file from setuptools package finder

[project]
name = "hamiltonian_systems_jax"
version = "0.0.1"
authors = [
    { name = "Tycho van der Ouderaa", email = "t.van-der-ouderaa21@imperial.ac.uk" },
    { name = "Chris Cooling", email = "c.cooling10@imperial.ac.uk" },
    { name = "Chris Cave-Ayland", email = "c.cave-ayland@imperial.ac.uk" },
]
requires-python = ">=3.11"
dependencies = ["jax[cpu]"]

[project.optional-dependencies]
dev = [
    "ruff",
    "pip-tools",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocs-jupyter",
    "python-markdown-math",
]

[tool.pytest.ini_options]
addopts = "-v -p no:warnings --cov=hamiltonian_systems_jax --cov-report=html --doctest-modules"

[tool.ruff.lint]
select = ["D", "E", "F", "I"] # pydocstyle, pycodestyle, Pyflakes, isort

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"
